--- a/privacy.html
+++ b/privacy.html
@@ -120,10 +120,55 @@
                         <li><strong>Device and Usage Data (Non-Personal/Aggregated):</strong> Some Apps may collect non-personally identifiable information about your device (e.g., device model, operating system version) and how you use the App. This may include your device's Internet Protocol (IP) address (which may be anonymized or truncated), the pages or screens of the Application that you visit, the time and date of your visit, the time spent on those pages/screens, and general usage patterns. This data is typically aggregated and anonymized and may be collected through standard platform services (like Apple App Analytics) or privacy-conscious third-party analytics tools. This helps me understand usage trends and improve the Apps. Any such collection will be for internal purposes only.</li>
                         <li><strong>Crash Reporting:</strong> To maintain and improve app stability, Apps may utilize services (including Apple's own reporting or third-party tools like Firebase Crashlytics or Sentry) to automatically collect diagnostic information when an App crashes. This information (such as device state at the time of crash, OS version, and anonymized stack traces) helps me identify and resolve bugs. This data does not typically contain personally identifiable information.</li>
                         <li><strong>No Precise Location Tracking:</strong> My Applications generally do not gather precise information about the location of your mobile device unless a specific feature requires it and you grant explicit permission.</li>
-                        <li><strong>No Unnecessary Tracking:</strong> I do not engage in tracking your activity across other companies' apps or websites for advertising purposes.</li>
                     </ul>
                     <p><em>For specific details on data collection for a particular App, please refer to its App Store listing or any in-app information provided. However, the principles in this policy will always govern.</em></p>
 
+                    <h2>Advertising and Google AdMob</h2>
+                    <p>
+                        Some of my Apps may display advertisements to support the free versions of the applications. I use <strong>Google AdMob</strong> as my advertising network provider. AdMob is a mobile advertising platform provided by Google LLC. This applies to all of my Apps that show ads (current and future); Apps that are paid or ad-free are excluded from ad collection entirely.
+                    </p>
+                    <p><strong>Data Collected for Advertising:</strong></p>
+                    <p>
+                        When you use Apps that display advertisements, Google AdMob may collect certain information to provide and improve ad services. This may include:
+                    </p>
+                    <ul>
+                        <li><strong>Device Information:</strong> Device identifiers (such as advertising IDs like IDFA on iOS or Advertising ID on Android), device type, operating system, and device settings.</li>
+                        <li><strong>Usage Data:</strong> Information about how you interact with ads, including ad views, clicks, and interactions.</li>
+                        <li><strong>Location Data:</strong> General location information (approximate location based on IP address) may be used for ad targeting, though precise location is not collected without your explicit permission.</li>
+                        <li><strong>App Activity:</strong> Information about the app you're using and general usage patterns to help deliver relevant advertisements.</li>
+                        <li><strong>IP Address:</strong> Your IP address may be collected and used for ad delivery and fraud prevention purposes.</li>
+                    </ul>
+                    <p>
+                        This data is collected and processed by Google AdMob in accordance with Google's privacy practices. Google may use this information to:
+                    </p>
+                    <ul>
+                        <li>Show you personalized ads based on your interests</li>
+                        <li>Measure ad performance and effectiveness</li>
+                        <li>Prevent fraud and abuse</li>
+                        <li>Comply with legal obligations</li>
+                    </ul>
+                    <p>
+                        For more detailed information about how Google collects and uses data for advertising, please review <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google's Privacy Policy</a> and <a href="https://support.google.com/admob/answer/6128543" target="_blank" rel="noopener noreferrer">Google AdMob's privacy information</a>.
+                    </p>
+                    <p><strong>Consent and App Tracking Transparency (iOS):</strong></p>
+                    <p>
+                        On iOS, Apps that use personalized ads will ask for permission to track you across apps and websites (App Tracking Transparency). If you decline, I will request non-personalized ads where available, and ads will still show but will be less tailored. For users in regions that require it (e.g., EU/EEA/UK under GDPR or certain U.S. states under CPRA/CCPA), a consent prompt (Google’s User Messaging Platform) may also be shown before requesting tracking permission.
+                    </p>
+                    <p><strong>How to Opt-Out of Personalized Advertising:</strong></p>
+                    <p>
+                        You have the right to opt-out of personalized advertising. You can control ad personalization through your device settings:
+                    </p>
+                    <ul>
+                        <li><strong>iOS (tracking permission):</strong> Settings → Privacy &amp; Security → Tracking → disable “Allow Apps to Request to Track” or toggle it off for my Apps.</li>
+                        <li><strong>iOS Devices:</strong> Go to Settings → Privacy & Security → Apple Advertising → turn off "Personalized Ads". You can also reset your Advertising Identifier (IDFA) by going to Settings → Privacy & Security → Apple Advertising → "Reset Advertising Identifier".</li>
+                        <li><strong>Android Devices:</strong> Go to Settings → Google → Ads → turn on "Opt out of Ads Personalization". You can also reset your Advertising ID by going to Settings → Google → Ads → "Reset advertising ID".</li>
+                    </ul>
+                    <p>
+                        Additionally, you can opt-out of personalized ads from Google AdMob specifically by visiting <a href="https://adssettings.google.com/" target="_blank" rel="noopener noreferrer">Google's Ad Settings</a> and adjusting your preferences.
+                    </p>
+                    <p>
+                        <strong>Note:</strong> Opting out of personalized advertising does not mean you will stop seeing ads. You will still see advertisements, but they may be less relevant to your interests. The number of ads you see will not change.
+                    </p>
 
                     <h2>How I Use Your Information</h2>
                     <p>I use the information I collect (which is minimal and often non-personal) for the following general purposes:</p>
@@ -140,11 +185,11 @@
                     <p><strong>Emphasis on Local Data Storage:</strong> A core principle for many of my Apps is to store your primary user-generated content locally on your device. This means I generally do not have access to this data unless you explicitly choose to share it (e.g., via an export function that uses your device's native sharing capabilities or an optional, clearly indicated cloud backup/sync feature).</p>
 
                     <h2>Sharing of Your Information</h2>
-                    <p>I do not sell, trade, rent, or otherwise share your personal information with third parties for their marketing or advertising purposes.</p>
+                    <p>I do not sell, trade, rent, or otherwise share your personal information with third parties for their marketing or advertising purposes, except as described in this policy regarding advertising services.</p>
                     <p>I may disclose information in the following limited circumstances:</p>
                     <ul>
                         <li><strong>With Your Consent:</strong> I may share your information with third parties if you have given me your explicit consent to do so for a specific purpose.</li>
-                        <li><strong>Service Providers:</strong> I may engage third-party companies or individuals to perform services on my behalf (e.g., analytics providers, crash reporting tools, payment processors for subscriptions like RevenueCat, customer support platforms). These service providers will only have access to the information necessary to perform these tasks on my behalf and are obligated not to disclose or use it for any other purpose. I will vet such providers for their privacy and security practices. For example, if an App uses RevenueCat for managing subscriptions, their privacy policy can be found at <a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">www.revenuecat.com/privacy</a>.</li>
+                        <li><strong>Service Providers:</strong> I may engage third-party companies or individuals to perform services on my behalf (e.g., analytics providers, crash reporting tools, payment processors for subscriptions like RevenueCat, customer support platforms, advertising networks like Google AdMob). These service providers will only have access to the information necessary to perform these tasks on my behalf and are obligated not to disclose or use it for any other purpose. I will vet such providers for their privacy and security practices. For example, if an App uses RevenueCat for managing subscriptions, their privacy policy can be found at <a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">www.revenuecat.com/privacy</a>. For advertising services, Google AdMob's privacy policy can be found at <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">policies.google.com/privacy</a>.</li>
                         <li><strong>Legal Requirements:</strong> I may disclose your information if required to do so by law or in the good faith belief that such action is necessary to: (a) comply with a legal obligation or government request; (b) protect and defend my rights or property; (c) prevent or investigate possible wrongdoing in connection with the Services; or (d) protect the personal safety of users of the Services or the public.</li>
                         <li><strong>Business Transfers:</strong> If I am involved in a merger, acquisition, financing due diligence, reorganization, bankruptcy, receivership, sale of company assets, or transition of service to another provider, your information may be sold or transferred as part of such a transaction, as permitted by law and/or contract. I will notify you if your information becomes subject to a different privacy policy.</li>
                         <li><strong>Aggregated or De-identified Data:</strong> Only aggregated, anonymized data may be periodically transmitted to external services to aid me in improving the Application and my service. I may share aggregated or de-identified information, which cannot reasonably be used to identify you, for various purposes, including research, analysis, or improving my Services.</li>
@@ -167,6 +212,9 @@
                     </p>
                     <p>
                         You can stop all collection of information by an Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network. Specific Apps may also offer in-app settings to control certain data collection or features.
+                    </p>
+                    <p>
+                        <strong>Opting Out of Advertising Data Collection:</strong> As described in the "Advertising and Google AdMob" section above, you can opt-out of personalized advertising through your device settings or Google's Ad Settings. However, please note that some data collection may still occur for basic ad delivery and fraud prevention purposes, even when personalized advertising is disabled.
                     </p>
 
 
