Add ContactSweeper-specific contacts data handling section to privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -184,6 +184,21 @@
                     </ul>
                     <p><strong>Emphasis on Local Data Storage:</strong> A core principle for many of my Apps is to store your primary user-generated content locally on your device. This means I generally do not have access to this data unless you explicitly choose to share it (e.g., via an export function that uses your device's native sharing capabilities or an optional, clearly indicated cloud backup/sync feature).</p>
 
+                    <h2>ContactSweeper: Contacts Data Handling</h2>
+                    <p>
+                        <strong>ContactSweeper</strong> is a contact management app that helps you clean up and organize your device's contacts. Here is how your contacts data is handled:
+                    </p>
+                    <ul>
+                        <li><strong>No Server Upload:</strong> Your contacts are <strong>never uploaded</strong> to any server. All contact data remains entirely on your device.</li>
+                        <li><strong>No Server Storage:</strong> I do <strong>not store</strong> your contacts on any server. There is no cloud storage, no remote database, and no external transmission of your contact information.</li>
+                        <li><strong>On-Device Processing Only:</strong> All contact cleanup, merging, and organization operations are performed entirely on your device using Apple's Contacts framework. Your contact data never leaves your device.</li>
+                        <li><strong>Local App Data:</strong> The app stores swipe history, preferences, and undo states locally on your device to provide features like undo and progress tracking. This data does not include the actual contact details—only identifiers and action records.</li>
+                        <li><strong>Export Features:</strong> If you use the VCF export feature, the exported file is created locally on your device and shared using your device's native sharing capabilities. I have no access to exported files.</li>
+                    </ul>
+                    <p>
+                        <em>In summary: ContactSweeper operates entirely on-device. Your contacts never leave your device and are never transmitted to or stored on any external server.</em>
+                    </p>
+
                     <h2>Sharing of Your Information</h2>
                     <p>I do not sell, trade, rent, or otherwise share your personal information with third parties for their marketing or advertising purposes, except as described in this policy regarding advertising services.</p>
                     <p>I may disclose information in the following limited circumstances:</p>
